syntax = "proto3";

package quran;

option go_package = "khalif-alquran/pkg/pb";

service QuranService {
  rpc GetAllSurahs (Empty) returns (SurahListResponse);
  rpc GetSurahDetail (SurahDetailRequest) returns (SurahDetailResponse);
}

message Empty {}

message Surah {
  int32 number = 1;
  string name = 2;
  string latin_name = 3;
  string english_name = 4;
  string indonesian_name = 7; // FIELD BARU
  string revelation_type = 5;
  int32 total_ayahs = 6;
}

message Ayah {
  int32 number = 1;
  string text_arabic = 2;
  string text_latin = 3;
  string translation = 4;
}

message SurahListResponse {
  repeated Surah surahs = 1;
}

message SurahDetailRequest {
  int32 number = 1;
}

message SurahDetailResponse {
  Surah surah = 1;
  repeated Ayah ayahs = 2;
}